@@ -719,6 +719,13 @@ _pam_krb5_options_init(pam_handle_t *pamh, int argc,
 	if (options->debug && (options->validate == 1)) {
 		debug("flag: validate");
 	}
+	options->validate_user_user = option_b(argc, argv,
+					       ctx, options->realm,
+					       service, NULL, NULL,
+					       "validate_user_user", 1);
+	if (options->debug && (options->validate_user_user == 1)) {
+		debug("flag: validate_user_user");
+	}
 
 	options->warn = option_b(argc, argv,
 				 ctx, options->realm,
